--- a/users/templates/admin/create_group.html
+++ b/users/templates/admin/create_group.html
@@ -52,7 +52,7 @@
       <input type="checkbox" class="mt-1 mr-3 group-checkbox accent-blue-600" data-perms="task-edit" />
       <div>
         <div class="font-medium text-gray-900 flex items-center gap-1">
-           <span>Task</span>
+           <span>Task Add/Update</span>
         </div>
         <p class="text-sm text-gray-600">Permissions: add, update</p>
       </div>
@@ -63,7 +63,7 @@
       <input type="checkbox" class="mt-1 mr-3 group-checkbox accent-blue-600" data-perms="task-delete" />
       <div>
         <div class="font-medium text-gray-900 flex items-center gap-1">
-           <span>Task</span>
+           <span>Task Delete </span>
         </div>
         <p class="text-sm text-gray-600">Permissions: delete only</p>
       </div>
@@ -74,7 +74,7 @@
       <input type="checkbox" class="mt-1 mr-3 group-checkbox accent-blue-600" data-perms="task-view" />
       <div>
         <div class="font-medium text-gray-900 flex items-center gap-1">
-           <span>Task</span>
+           <span>Task View</span>
         </div>
         <p class="text-sm text-gray-600">Permissions: view only</p>
       </div>
@@ -85,7 +85,7 @@
       <input type="checkbox" class="mt-1 mr-3 group-checkbox accent-blue-600" data-perms="taskdetail-edit" />
       <div>
         <div class="font-medium text-gray-900 flex items-center gap-1">
-          <span>Task Detail</span>
+          <span>Task Detail Add/Update/Delete</span>
         </div>
         <p class="text-sm text-gray-600">Permissions: add, update, delete</p>
       </div>
@@ -96,7 +96,7 @@
       <input type="checkbox" class="mt-1 mr-3 group-checkbox accent-blue-600" data-perms="taskdetail-view" />
       <div>
         <div class="font-medium text-gray-900 flex items-center gap-1">
-           <span>Task Detail</span>
+           <span>Task Detail View</span>
         </div>
         <p class="text-sm text-gray-600">Permissions: view only</p>
       </div>
