--- a/tasks/templates/dashboard/dashboard.html
+++ b/tasks/templates/dashboard/dashboard.html
@@ -2,7 +2,7 @@
 {% load task_tags %}
 {% block content %}
         
-<div class="max-w-[1450px] mx-auto px-4">
+<div class="container mx-auto p-6" v-cloak>
   <!-- Stats Grid -->
   <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6 my-10">
     
