--- a/core/templates/permission_denied.html
+++ b/core/templates/permission_denied.html
@@ -5,7 +5,7 @@
     <div class="text-center">
       <h1 class="text-3xl font-bold text-red-600">403 - Permission Denied</h1>
       <p class="mt-4 text-lg text-gray-700">
-        You do not have permission to view this page.
+        You do not have permission to Access this page.
       </p>
     </div>
   </div>
